crates/ato-tests/tests/snapshots/parse_tests__module_with_pins_ast.snap
---
source: crates/ato-tests/tests/parse_tests.rs
expression: serde_json::to_value(&ast).unwrap()
---
span:
  column: 1
  end: 38
  line: 1
  start: 0
statements:
  - BlockDef:
      body:
        - PinDeclaration:
            name:
              Identifier:
                name: p1
                span:
                  column: 1
                  end: 21
                  line: 1
                  start: 19
            span:
              column: 1
              end: 21
              line: 1
              start: 15
        - PinDeclaration:
            name:
              Identifier:
                name: p2
                span:
                  column: 1
                  end: 30
                  line: 1
                  start: 28
            span:
              column: 1
              end: 30
              line: 1
              start: 24
        - Connection:
            left:
              FieldRef:
                parts:
                  - index: ~
                    name:
                      name: p1
                      span:
                        column: 1
                        end: 36
                        line: 1
                        start: 34
                    pin_ref: ~
                span:
                  column: 1
                  end: 36
                  line: 1
                  start: 34
            right:
              FieldRef:
                parts:
                  - index: ~
                    name:
                      name: p2
                      span:
                        column: 1
                        end: 38
                        line: 1
                        start: 36
                    pin_ref: ~
                span:
                  column: 1
                  end: 38
                  line: 1
                  start: 36
            span:
              column: 1
              end: 38
              line: 1
              start: 34
      kind: Module
      name:
        name: Test
        span:
          column: 1
          end: 11
          line: 1
          start: 7
      span:
        column: 1
        end: 38
        line: 1
        start: 0
      super_type: ~
